[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickgraph"
version = "0.1.0"
authors = [
    { name = "Tyler Bikaun", email = "tyler.bikaun@research.uwa.edu.au" },
]
description = "QuickGraph - Rapid Collaborative Multi-Task Knowledge Graph Extraction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "pydantic-settings"
]
[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.3",
    "flake8>=6.1.0",
]

[tool.hatch.build]
packages = ["quickgraph"]

[tool.hatch.build.packages.quickgraph]
source = "src"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true  # Require return types
disallow_incomplete_defs = true  # Require all parameter types
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

[tool.flake8]
max-line-length = 88  # Match black's line length
extend-ignore = "E203"  # Ignore whitespace before ':' (for black compatibility)
per-file-ignores = "__init__.py:F401"
extend-select = [
    "D",   # Enable docstring checks
    "B",   # Enable bugbear checks
    "C",   # Enable complexity checks
]
docstring-convention = "google"  # Use Google-style docstrings
max-complexity = 10  # Maximum McCabe complexity
require-return-type-doc = true
require-param-type-doc = true